--- a/crates/undefined_redstone_protocol/Cargo.toml
+++ b/crates/undefined_redstone_protocol/Cargo.toml
@@ -11,9 +11,9 @@ flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
 rand = "0.9.0-alpha.1"
 snap = "1"
 uuid = { version = "1.10.0", features = ["v4"] }
-sha2 = "0.11.0-pre.3"
+sha2 = "0.10.8"
 serde_json = "1.0.120"
-hmac = "0.13.0-pre.3"
+hmac = "0.12.0"
 base64 = "0.22.1"
 jwt = "0.16.0"
 serde = "1"
