--- a/crates/undefined_redstone_network/Cargo.toml
+++ b/crates/undefined_redstone_network/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+undefined_redstone_protocol = { path = "../undefined_redstone_protocol" }
 rak-rs = { path = "../RakNet-master", default-features = false, features = ["async_tokio", "mcpe"] }
+binary-util = { path = "../binary_util" }
 bevy_ecs = "0.14.0"
 bevy_app = "0.14.0"
 tokio = "1.38.0"
 rand = "0.8.5"
+anyhow = "1.0.86"
