--- a/crates/undefined_redstone_core/Cargo.toml
+++ b/crates/undefined_redstone_core/Cargo.toml
@@ -8,11 +8,12 @@ undefined_redstone_network = { path = "../undefined_redstone_network" }
 undefined_redstone_type = { path = "../undefined_redstone_type" }
 undefined_redstone_protocol = { path = "../undefined_redstone_protocol" }
 undefined_redstone_packloader = { path = "../undefined_redstone_packloader" }
+undefined_redstone_log = { path = "../undefined_redstone_log" }
 rak-rs = { path = "../RakNet-master", default-features = false, features = ["async_tokio", "mcpe"] }
 tokio = { version = "1.35.1", features = ["full"] }
+rust-i18n = "3"
 bevy_ecs = "0.14.0"
 bevy_app = "0.14.0"
-rust-i18n = "3"
 chrono = "0.4"
 toml = "0.8.8"
 rand = "0.9.0-alpha.1"
