--- a/crates/undefined_redstone_network/Cargo.toml
+++ b/crates/undefined_redstone_network/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 [dependencies]
 undefined_redstone_protocol = { path = "../undefined_redstone_protocol" }
+undefined_redstone_log = { path = "../undefined_redstone_log" }
 rak-rs = { path = "../RakNet-master", default-features = false, features = ["async_tokio", "mcpe"] }
 binary-util = { path = "../binary_util" }
+rust-i18n = "3"
 bevy_ecs = "0.14.0"
 bevy_app = "0.14.0"
 tokio = "1.38.0"
