--- a/crates/undefined_redstone_packloader/Cargo.toml
+++ b/crates/undefined_redstone_packloader/Cargo.toml
@@ -11,3 +11,6 @@ bevy_ecs = "0.14.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde-inline-default = "0.2"
 regex = "*"
+zip = "2.1.3"
+sha2 = "0.11.0-pre.3"
+anyhow = "1.0.86"
