--- a/crates/undefined_redstone_protocol/Cargo.toml
+++ b/crates/undefined_redstone_protocol/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 [dependencies]
 binary-util = { path = "../binary_util" }
+undefined_redstone_core = { path = "../undefined_redstone_core" }
 undefined_redstone_type = { path = "../undefined_redstone_type" }
 undefined_redstone_packloader = { path = "../undefined_redstone_packloader" }
 flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
+bevy_ecs = "0.14.0"
+bevy_app = "0.14.0"
 rand = "0.9.0-alpha.1"
 snap = "1"
 uuid = { version = "1.10.0", features = ["v4"] }
