--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,16 @@
 [workspace]
 members = [
-    "crates/undefined_redstone_core",
     "crates/RakNet-master",
-    "crates/binary_util", "crates/undefined_redstone_network", "crates/undefined_redstone_packloader", "crates/undefined_redstone_type", "crates/undefined_redstone_molang", "crates/undefined_redstone_proc", "crates/undefined_redstone_protocol", "crates/undefined_redstone_asyncmanager", "crates/undefined_redstone_log", "crates/undefined_redstone_startup"]
+    "crates/binary_util",
+    "crates/bevy-async-ecs",
+    "crates/undefined_redstone_core",
+    "crates/undefined_redstone_network",
+    "crates/undefined_redstone_packloader",
+    "crates/undefined_redstone_type",
+    "crates/undefined_redstone_molang",
+    "crates/undefined_redstone_proc",
+    "crates/undefined_redstone_protocol",
+    "crates/undefined_redstone_asyncmanager",
+    "crates/undefined_redstone_log",
+    "crates/undefined_redstone_startup",
+]
