--- a/crates/undefined_redstone_core/Cargo.toml
+++ b/crates/undefined_redstone_core/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 undefined_redstone_type = { path = "../undefined_redstone_type" }
 undefined_redstone_log = { path = "../undefined_redstone_log" }
+undefined_redstone_nbt = { path = "../undefined_redstone_nbt" }
 rak-rs = { path = "../RakNet-master", default-features = false, features = ["async_tokio", "mcpe"] }
 tokio = { version = "1.35.1", features = ["full"] }
 rust-i18n = "3"
@@ -14,3 +15,4 @@ bevy_app = "0.14.0"
 chrono = "0.4"
 toml = "0.8.8"
 rand = "0.9.0-alpha.1"
+uuid = { version = "1.10.0", features = ["v4"] }
